Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -162,16 +162,35 @@ WRITE: / ls_flight-carrid, ls_flight-connid.
 ```abap
 <target_structure> = CORRESPONDING FIELDS OF <source_structure>.
 ```
+- CORRESPONDING FIELDS OF 사용했을 때
 ```abap
 DATA: ls_flight TYPE sflight.
+ls_flight-cityfrom = 'Seoul'.  " 기존 값
 
-" sflight 테이블에서 seatmax, seatsocc 필드만 ls_flight로 복사
 SELECT SINGLE seatmax seatsocc
   FROM sflight
   INTO CORRESPONDING FIELDS OF ls_flight
   WHERE carrid = 'AA' AND connid = '0017'.
 
-WRITE: / ls_flight-seatmax, ls_flight-seatsocc.
+" 결과:
+" ls_flight-seatmax = DB 값
+" ls_flight-seatsocc = DB 값
+" ls_flight-cityfrom = 'Seoul' (기존 값 그대로)
+```
+- CORRESPONDING FIELDS OF 사용하지 않았을 때
+```abap
+DATA: ls_flight TYPE sflight.
+CLEAR ls_flight.
+
+SELECT SINGLE seatmax seatsocc
+  FROM sflight
+  INTO ls_flight
+  WHERE carrid = 'AA' AND connid = '0017'.
+
+" 결과:
+" ls_flight-seatmax = DB 값
+" ls_flight-seatsocc = DB 값
+" ls_flight-cityfrom = 초기화 (빈 값)
 ```
 </br>
 </br>
