Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -308,4 +308,10 @@ WRITE:/ gs_data-carrid,
         gs_data-percentage.
 ENDLOOP.
 ```
+</br>
+</br>
+</br>
+
+### 실습 2
+- function module로 carrid, connid를 받으면 spfli에서 1건 조회하여 반환하는 로직 구현
 
