Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -137,6 +137,7 @@ SELECT carrid connid
 
 **2) Single (1건 조회)**
 - 조건에 맞는 단일 레코드를 조회할 때 사용
+- SELECT SINGLE로 일부 필드만 조회하면, 조회한 필드만 값이 들어가고 나머지 필드는 모두 초기화
 ```abap
 SELECT SINGLE <field1> <field2> ...
   FROM <table>
