Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -323,4 +323,41 @@ ENDLOOP.
 </br>
 
 **2) Export 표 채우기**
+
+<img width="599" height="108" alt="image" src="https://github.com/user-attachments/assets/e7aaadb5-08f8-42f9-b6a3-24d1c4c268ba" />
+
 </br>
+
+**3) Exceptions 표 채우기**
+
+<img width="599" height="130" alt="image" src="https://github.com/user-attachments/assets/1e247174-54a7-465d-b975-cc45e696f5c0" />
+
+</br>
+
+**4) Function Module 코드**
+```abap
+FUNCTION z_bc400_03_connection_get.
+*"----------------------------------------------------------------------
+*"*"Local Interface:
+*"  IMPORTING
+*"     REFERENCE(IV_CARRID) TYPE  S_CARR_ID
+*"     REFERENCE(IV_CONNID) TYPE  S_CONN_ID
+*"  EXPORTING
+*"     REFERENCE(ES_CONNECTION) TYPE  BC400_S_CONNECTION
+*"  EXCEPTIONS
+*"      NO_DATA
+*"----------------------------------------------------------------------
+
+  SELECT SINGLE carrid connid
+    FROM spfli
+    INTO es_connection
+    WHERE carrid = iv_carrid AND connid = iv_connid.
+
+  WRITE:/ es_connection-carrid, es_connection-connid.
+
+  IF sy-subrc <> 0.
+    RAISE no_data.
+  ENDIF.
+
+ENDFUNCTION.
+```
