--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -362,3 +362,32 @@ FUNCTION z_bc400_03_connection_get.
 
 ENDFUNCTION.
 ```
+</br>
+
+**5) Program 코드**
+```abap
+PARAMETERS: p_carrid TYPE c LENGTH 3,
+            p_connid TYPE n LENGTH 4.
+DATA: gs_data TYPE bc400_s_connection.
+
+CALL FUNCTION 'Z_BC400_03_CONNECTION_GET'
+  EXPORTING
+    iv_carrid     = p_carrid
+    iv_connid     = p_connid
+  IMPORTING
+    es_connection = gs_data
+  EXCEPTIONS
+    no_data       = 1
+    OTHERS        = 2.
+
+IF sy-subrc <> 0.
+  MESSAGE '데이터가 없습니다.' TYPE 'E'.
+ELSE.
+  WRITE:/ '최종 :',
+          gs_data-carrid, gs_data-connid,
+          gs_data-cityfrom, gs_data-airpfrom,
+          gs_data-cityto, gs_data-airpto,
+          gs_data-fltime, gs_data-deptime,
+          gs_data-arrtime.
+ENDIF.
+```
