Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -349,12 +349,10 @@ FUNCTION z_bc400_03_connection_get.
 *"      NO_DATA
 *"----------------------------------------------------------------------
 
-  SELECT SINGLE carrid connid
+  SELECT SINGLE carrid connid cityfrom airpfrom cityto airpto fltime deptime
     FROM spfli
     INTO es_connection
     WHERE carrid = iv_carrid AND connid = iv_connid.
-
-  WRITE:/ es_connection-carrid, es_connection-connid.
 
   IF sy-subrc <> 0.
     RAISE no_data.
@@ -383,8 +381,7 @@ CALL FUNCTION 'Z_BC400_03_CONNECTION_GET'
 IF sy-subrc <> 0.
   MESSAGE '데이터가 없습니다.' TYPE 'E'.
 ELSE.
-  WRITE:/ '최종 :',
-          gs_data-carrid, gs_data-connid,
+  WRITE:/ gs_data-carrid, gs_data-connid,
           gs_data-cityfrom, gs_data-airpfrom,
           gs_data-cityto, gs_data-airpto,
           gs_data-fltime, gs_data-deptime,
