Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -195,6 +195,15 @@ SELECT SINGLE seatmax seatsocc
 ```
 </br>
 </br>
+
+**4) SELECT … ENDSELECT**
+- DB를 row-by-row 방식으로 조회
+- SELECT된 각 레코드를 반복 처리
+- `sy-dbcnt` 사용 가능
+
+
+</br>
+</br>
 </br>
 
 ---
