Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -200,7 +200,39 @@ SELECT SINGLE seatmax seatsocc
 - DB를 row-by-row 방식으로 조회
 - SELECT된 각 레코드를 반복 처리
 - `sy-dbcnt` 사용 가능
+```abap
+SELECT <필드목록>                  " <필드목록> : 가져올 컬럼 이름 (예: carrid, connid)
+  FROM <테이블명>                  " <테이블명> : DB 테이블 이름 (예: sflight)
+  INTO <워크에어리어 변수>          " <워크에어리어 변수> : 데이터를 담을 ABAP 변수/구조
+  [WHERE <조건문>]                 " WHERE : 선택 조건 (선택 사항)
+  [ORDER BY <정렬필드>].            " ORDER BY : 정렬 조건 (선택 사항)
+  
+  " 처리 로직 작성 (레코드 하나씩 처리)
+  
+ENDSELECT.
+```
+```abap
+* SELECT LOOP
+DATA: ls_connect  TYPE BC400_s_connection,
+      lt_connects LIKE TABLE OF ls_connect.
 
+PARAMETERS: pa_car TYPE s_carr_id.
+
+SELECT *
+  FROM spfli
+  INTO CORRESPONDING FIELDS OF ls_connect
+  WHERE carrid = pa_car.
+  " 참고) 여기선 sy-dbcnt로 index를 얻을 수 있음
+    APPEND ls_connect TO lt_connects.
+  WRITE: ls_connect-arrtime.
+ENDSELECT.
+
+IF sy-subrc <> 0.
+  MESSAGE 'Data is not exist' TYPE 'E'.
+ELSE.
+  cl_demo_output=>display( lt_connects ).
+ENDIF.
+```
 
 </br>
 </br>
