--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -248,6 +248,19 @@ ENDLOOP.
 ```
 </br>
 </br>
+
+**6) SELECT-OPTIONS**
+- 사용자가 입력한 범위나 조건을 DB 조회용으로 저장하는 ABAP 키워드
+- 내부적으로 테이블 구조로 만들어지며, 단일 값, 범위, 제외 조건까지 처리 가능
+- FOR 뒤에는 `데이터 오브젝트(필드)`가 들어가야 함.
+```abap
+SELECT-OPTIONS: <옵션이름> FOR <필드> [DEFAULT <값>].
+```
+```abap
+SELECT-OPTIONS: so_conn FOR spfli-connid DEFAULT '17'.
+```
+</br>
+</br>
 </br>
 
 ---
