Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -257,7 +257,26 @@ ENDLOOP.
 SELECT-OPTIONS: <옵션이름> FOR <필드> [DEFAULT <값>].
 ```
 ```abap
-SELECT-OPTIONS: so_conn FOR spfli-connid DEFAULT '17'.
+DATA: gt_connect TYPE TABLE OF spfli,
+      gs_connect TYPE spfli.
+
+PARAMETERS: pa_car TYPE s_carr_id DEFAULT 'AA'.
+
+" 사용자 입력 범위 생성 (connid 17이 기본값)
+SELECT-OPTIONS: so_con FOR gs_connect-connid DEFAULT '17'.
+
+" 조회 시 SELECT-OPTIONS 범위 적용
+SELECT *
+  FROM spfli
+  INTO CORRESPONDING FIELDS OF TABLE gt_connect
+  WHERE carrid = pa_car
+    AND connid IN so_con.
+
+LOOP AT gt_connect INTO gs_connect.
+  WRITE:/ gs_connect-carrid,
+        gs_connect-connid,
+        gs_connect-cityfrom.
+ENDLOOP.
 ```
 </br>
 </br>
@@ -552,4 +571,31 @@ IF sy-subrc <> 0.
   ENDIF.
 
 ENDFUNCTION.
+```
+</br>
+
+**4) SELECT-OPTIONS**
+```abap
+DATA: gs_connect TYPE BC400_S_CONNECTION,
+      gt_connect TYPE BC400_T_CONNECTIONS.
+DATA: gv_dt TYPE S_DATE.
+
+PARAMETERS: pa_car TYPE s_carr_id DEFAULT 'AA'.
+
+SELECT-OPTIONS: so_con FOR gs_connect-connid DEFAULT '17',
+                so_fdt FOR gv_dt.
+*SELECT-OPTIONS: so_con2 FOR S_CONN_ID. " 오류!
+* => FOR 뒤에는 TYPE이 들어오는게 아니라 DATA Object
+
+SELECT *
+  INTO CORRESPONDING FIELDS OF TABLE gt_connect
+  FROM spfli
+  WHERE carrid = pa_car
+    AND connid IN so_con.
+
+LOOP AT gt_connect INTO gs_connect.
+  WRITE:/ gs_connect-carrid,
+        gs_connect-connid,
+        gs_connect-cityfrom.
+ENDLOOP.
 ```
