--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -137,7 +137,7 @@ SELECT carrid connid
 
 **2) Single (1건 조회)**
 - 조건에 맞는 단일 레코드를 조회할 때 사용
-- SELECT SINGLE로 일부 필드만 조회하면, 조회한 필드만 값이 들어가고 나머지 필드는 모두 초기화
+- 부분 필드 조회 시 나머지 필드는 초기화됨
 ```abap
 SELECT SINGLE <field1> <field2> ...
   FROM <table>
@@ -159,7 +159,8 @@ WRITE: / ls_flight-carrid, ls_flight-connid.
 </br>
 
 **3) CORRESPONDING FIELDS OF**
-- 구조 간 동일한 이름을 가진 필드만 선택적으로 복사하는 ABAP 구문
+- 이름이 같은 필드만 매핑
+- 나머지 필드는 기존값 유지
 ```abap
 <target_structure> = CORRESPONDING FIELDS OF <source_structure>.
 ```
