Update 프로그래핑 문법과 로직 (11.21).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.21).md
@@ -123,7 +123,7 @@ DATA: gt_iteb1 TYPE STANDARD TABLE OF BC400_S_FLIGHT
 </br>
 </br>
 
-**3) Sorted Internal Table 선언**tkrwp
+**3) Sorted Internal Table 선언**
 - `gt_item4` : 지정된 키 기준으로 항상 정렬되는 Internal Table, 중복 키 허용.
 - `gt_itab5` : 지정된 키 기준으로 정렬, 중복 키 불가.
 ```abap
