--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -198,8 +198,9 @@ SELECT SINGLE seatmax seatsocc
 </br>
 
 **4) SELECT … ENDSELECT (Row-by-Row)**
-- 한 줄씩 DB에서 읽어오고, 읽을 때마다 바로 처리하는 방식
-- 다 건 SELECT 반복 조회회
+- 한 줄씩 DB에서 읽어오고, 읽을 때마다 바로 처리하는 방식 (다 건 SELECT 반복 조회)
+- DB를 한 줄 가져올 때마다 계속 DB를 다시 호출하는 방식 → 느림
+- 반면에, `LOOP AT`은 DB에서 한 번에 전체 데이터를 가져온 뒤 메모리에서 반복 → 빠름
 - `sy-dbcnt` 사용 가능
 ```abap
 SELECT <필드목록>                  " <필드목록> : 가져올 컬럼 이름 (예: carrid, connid)
