Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -310,6 +310,9 @@ ENDLOOP.
   - 다중 클라이언트 환경에서 데이터 구분용
   - SAP 시스템에서 클라이언트를 식별하는 역할
   - 예: `MANDT = client`
+ 
+  <img width="559" height="378" alt="image" src="https://github.com/user-attachments/assets/a577c609-6dbb-4d44-8da5-3c0d9f6978bd" />
+
 </br>
 </br>
 </br>
