--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -367,10 +367,14 @@ ENDLOOP.
 ## < 실습 코드 >
 
 ### 실습 1
-- LOOP AT 반복문과 MODIFY를 이용하여 결과 출력
+- LOOP AT 반복문과 MODIFY, Header Line, Sort를 이용하여 결과 출력
 ```abap
 DATA: gs_data TYPE bc400_s_flight,
       gt_data TYPE TABLE OF bc400_s_flight.
+
+" Header Line이 포함된 인터널 테이블 변수 선언
+" => 아래에서 사용한 gs_data/gt_data를 gt_hline으로 바꿔보는걸로..
+DATA: gt_data2 TYPE TABLE OF bc400_s_flight WITH HEADER LINE.
 
 SELECT carrid connid fldate seatsmax seatsocc
   FROM sflight
@@ -388,17 +392,20 @@ IF ( sy-subrc = 0 ).
   ENDLOOP.
 ENDIF.
 
+SORT gt_data BY connid ASCENDING
+                percentage DESCENDING.
+
 " 2) percentage 반영된 itab을 LOOP 돌면서,
 "    percentage 가 80을 초과하는 레코드만 출력한다. (출력필드는 전체필드 기준)
 
 CLEAR gs_data.
-loop AT gt_data INTO gs_data WHERE percentage > 80.
-WRITE:/ gs_data-carrid,
-        gs_data-connid,
-        gs_data-fldate,
-        gs_data-seatsmax,
-        gs_data-seatsocc,
-        gs_data-percentage.
+LOOP AT gt_data INTO gs_data WHERE percentage > 80.
+  WRITE:/ gs_data-carrid,
+          gs_data-connid,
+          gs_data-fldate,
+          gs_data-seatsmax,
+          gs_data-seatsocc,
+          gs_data-percentage.
 ENDLOOP.
 ```
 </br>
