--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -1,5 +1,51 @@
 # < ABAP 문법 정리 >
 ### 1) WITH HEADER LINE
+- 내부 테이블 안에 자동으로 한 줄(row)을 나타내는 구조를 생성
+- 테이블 이름과 동일한 구조가 만들어져 별도 워크에어리어 없이 한 줄 데이터를 바로 사용 가능
+  - `itab[]` → 테이블 전체
+  - `itab` → 테이블의 헤더라인(한 줄)
 ```abap
 DATA: <itab> TYPE TABLE OF <structure> WITH HEADER LINE.
+```
+- INTO 절 생략 가능
+```abap
+LOOP AT gt_hline.
+  WRITE: gt_hline-carrid.  "헤더 라인 사용 덕분에 INTO 생략 가능
+ENDLOOP.
+```
+- MODIFY 시 자동 참조
+```abap
+gt_hline-percentage = gt_hline-seatsocc * 100 / gt_hline-seatsmax.
+MODIFY gt_hline.  "워크 에어리어(gt_hline)를 테이블에 적용
+```
+- 실습
+```abap
+" Header Line이 있는 Internal table 선언
+" gt_hline은 Structure, gt_hline[] 은 Itab 이 된다.
+DATA: gt_hline TYPE TABLE OF bc400_s_flight WITH HEADER LINE.
+
+SELECT carrid connid fldate seatsmax seatsocc
+  FROM sflight
+  INTO TABLE gt_hline[]
+  WHERE carrid = 'AA'.
+
+IF ( sy-subrc = 0 ).
+  LOOP AT gt_hline.       " INTO 절 생략 가능
+    gt_hline-percentage = gt_hline-seatsocc * 100 / gt_hline-seatsmax.
+    MODIFY gt_hline.
+  ENDLOOP.
+ENDIF.
+
+SORT gt_hline[] BY connid ASCENDING
+                   percentage DESCENDING.
+
+CLEAR gt_hline.
+LOOP AT gt_hline WHERE percentage > 80.
+  WRITE:/ gt_hline-carrid,
+          gt_hline-connid,
+          gt_hline-fldate,
+          gt_hline-seatsmax,
+          gt_hline-seatsocc,
+          gt_hline-percentage.
+ENDLOOP.
 ```
