Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -1,4 +1,4 @@
-# < ABAP 문법 정리 >
+## < ABAP 문법 정리 >
 </br>
 
 ### 1) WITH HEADER LINE
@@ -51,3 +51,6 @@ LOOP AT gt_hline WHERE percentage > 80.
           gt_hline-percentage.
 ENDLOOP.
 ```
+</br>
+
+## ABAP 개념 정리
