Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -59,3 +59,22 @@ ENDLOOP.
 </br>
 
 ## ABAP 개념 정리
+</br>
+
+### Selection Screen 주요 특징
+- 실행 버튼 누르면 DB 테이블에서 조건에 맞는 데이터 추출
+- 다국어 처리 지원
+- 입력 값 타입 자동 체크 (예: 숫자, 날짜, 문자열)
+- 입력 값 저장 및 재사용 가능
+- 복잡한 조건(범위, 다중 선택 등) 처리 가능
+- 입력 값 범위 및 형식 제한 기능 (F4 도움말 등)
+</br>
+
+### 파라미터 선언 예시 및 특징
+- `TYPE` 뒤에 올 수 있는 타입은 표준 타입 혹은 데이터 딕셔너리 필드 타입
+- 파라미터는 단일 입력값 받음
+- 입력 필드의 데이터 타입이 자동 적용됨 (숫자, 문자열 등)
+```abap
+PARAMETERS: pa_car TYPE s_carr_id.
+PARAMETERS: pa_car TYPE spfli-carrid.
+```
