Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -78,3 +78,17 @@ ENDLOOP.
 PARAMETERS: pa_car TYPE s_carr_id.
 PARAMETERS: pa_car TYPE spfli-carrid.
 ```
+</br>
+
+### Select-Options 관련 주요 사항
+- 선언 시 `TYPE`이 아니라 `FOR` 키워드 사용
+```abap
+SELECT-OPTIONS: so_car FOR spfli-carrid.
+```
+- FOR 뒤에는 이미 선언된 데이터 오브젝트나 DDIC 필드명을 사용
+- Select-options는 내부적으로 테이블(ITAB) 구조를 가짐
+- Select-options 로 입력된 범위값을 사용할 때는 IN 키워드 사용
+- 만약 so_car가 빈 값이면 조건 없이 전체 조회됨
+```abap
+SELECT * FROM spfli WHERE carrid IN so_car.
+```
