Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -92,3 +92,21 @@ SELECT-OPTIONS: so_car FOR spfli-carrid.
 ```abap
 SELECT * FROM spfli WHERE carrid IN so_car.
 ```
+</br>
+
+### ITAB 필드 정의
+
+| 필드명 | 의미 |
+|--------|------|
+| SIGN   | 포함(I, Include) 또는 제외(E, Exclude) |
+| OPTION | 연산자 (EQ = 같음, BT = 범위, GE = 이상 등) |
+| LOW    | 범위 시작값 (From) |
+| HIGH   | 범위 끝값 (To, BT 연산자에서 사용) |
+
+- 예시
+
+| 조건 설명                          | SIGN | OPTION | LOW  | HIGH |
+|-----------------------------------|------|--------|------|------|
+| LH 값만 포함                        | I    | EQ     | LH   |      |
+| AA부터 DL까지 포함                  | I    | BT     | AA   | DL   |
+| BA 값 제외                          | E    | EQ     | BA   |      |
