Update 프로그래핑 문법과 로직 (11.24).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.24).md
@@ -109,7 +109,7 @@ FREE gt_flight.
 </br>
 
 **1) SELECT**
-- SELECT = DB 조회, LOOP = 내부 테이블 순회
+- `SELECT` = DB 조회, `LOOP` = 내부 테이블 순회
 - ABAP 프로그램에서 데이터베이스 테이블의 데이터를 읽어오는 SQL 명령어
 - `<field>`와 `<target>`의 구조가 동일해야 함
 ```abap
