Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -118,4 +118,26 @@ SELECT * FROM spfli WHERE carrid IN so_car.
 
 </br>
 
-## < 실습 >
+## < 실습 코드 >
+- 실습 1
+```abap
+DATA: gs_data TYPE SBOOK,
+      gt_data LIKE TABLE OF gs_data.
+
+PARAMETERS: pa_car TYPE S_CARR_ID DEFAULT 'AZ',
+            pa_con TYPE S_CONN_ID DEFAULT '0555'.
+
+SELECT-OPTIONS: so_dat FOR gs_data-FLDATE.
+
+
+SELECT * FROM SBOOK
+  INTO CORRESPONDING FIELDS OF TABLE gt_data
+  WHERE CARRID = pa_car
+    AND CONNID = pa_con
+    AND FLDATE IN so_dat.
+
+LOOP AT gt_data INTO gs_data.
+  WRITE:/ gs_data-CARRID, gs_data-CONNID, gs_data-FLDATE,
+          gs_data-BOOKID, gs_data-CUSTOMID, gs_data-CUSTTYPE.
+ENDLOOP.
+```
