Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -54,6 +54,36 @@ ENDLOOP.
 </br>
 </br>
 
+### 2) FOR ALL ENTRIES IN
+- 내부 테이블의 값들을 기준으로 DB에서 데이터를 조회
+- 다중 조건 가능
+- 내부 테이블이 비어있으면 전체 조회되므로 체크 필요
+- `FOR ALL ENTRIES IN <내부 테이블>` → 어떤 내부 테이블의 값들을 조건으로 쓸지 지정
+- `WHERE <DB필드> = <내부테이블-필드>` → 실제 비교 조건 작성
+```abap
+SELECT <필드>
+  FROM <DB 테이블>
+  FOR ALL ENTRIES IN <내부 테이블>
+  WHERE <조건 = 내부테이블-필드>
+  INTO <내부 테이블 또는 변수>.
+```
+```abap
+IF gt_data IS NOT INITIAL.
+  SELECT *
+    FROM sflight
+    INTO TABLE @gt_result
+    FOR ALL ENTRIES IN @gt_data
+    WHERE carrid = @gt_data-carrid.
+ENDIF.
+```
+</br>
+</br>
+
+### 3) IN 연산자
+
+</br>
+</br>
+
 ---
 
 </br>
