--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -63,9 +63,9 @@ ENDLOOP.
 ```abap
 SELECT <필드>
   FROM <DB 테이블>
+  INTO <내부 테이블 또는 변수>
   FOR ALL ENTRIES IN <내부 테이블>
-  WHERE <조건 = 내부테이블-필드>
-  INTO <내부 테이블 또는 변수>.
+  WHERE <조건 = 내부테이블-필드>.
 ```
 ```abap
 IF gt_data IS NOT INITIAL.
@@ -80,9 +80,45 @@ ENDIF.
 </br>
 
 ### 3) IN 연산자
+- 내부 테이블 또는 값 집합에 포함되는지 여부를 조건으로 사용
+- `FOR ALL ENTRIES` 없이도 여러 값을 조회 가능
+```abap
+WHERE field IN @itab_or_value
+```
+```abap
+SELECT carrid
+  FROM sflight
+  INTO TABLE @gt_data
+  WHERE carrid IN ('AA','AZ','LH').
+```
+</br>
+</br>
 
+### 3) DELETE ADJACENT DUPLICATES
+- 정렬된 내부 테이블에서 연속된 중복 레코드를 삭제
+- 중복 기준 필드를 지정 가능
+- `<내부테이블>` → 중복을 제거할 내부 테이블
+- `COMPARING` → 특정 필드 기준으로 중복 제거 (생략하면 전체 구조 기준)
+```abap
+DELETE ADJACENT DUPLICATES FROM <내부테이블>
+  [COMPARING <필드1> <필드2> ...].
+```
+```abap
+DATA: it_numbers TYPE TABLE OF i,
+      wa_number  TYPE i.
+
+APPEND 10 TO it_numbers.
+APPEND 10 TO it_numbers.
+APPEND 20 TO it_numbers.
+APPEND 20 TO it_numbers.
+APPEND 30 TO it_numbers.
+
+DELETE ADJACENT DUPLICATES FROM it_numbers.
+```
 </br>
 </br>
+
+
 
 ---
 
