Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -118,7 +118,19 @@ DELETE ADJACENT DUPLICATES FROM it_numbers.
 </br>
 </br>
 
+### 5) cl_demo_output=>display
+- 내부 테이블 또는 구조를 간단히 화면에 출력
+```abap
+cl_demo_output=>display( <itab> ).
+```
+```abap
+IF sy-subrc = 0.
+  cl_demo_output=>display( gt_result ).
+ENDIF.
+```
 
+</br>
+</br>
 
 ---
 
