Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -197,7 +197,10 @@ SELECT * FROM spfli WHERE carrid IN so_car.
 </br>
 
 ## < 실습 코드 >
-- 실습 1
+</br>
+
+### 실습 1
+- SELECT-OPTIONS와 SELECT 이용해서 LOOP로 출력하기
 ```abap
 DATA: gs_data TYPE SBOOK,
       gt_data LIKE TABLE OF gs_data.
@@ -219,3 +222,7 @@ LOOP AT gt_data INTO gs_data.
           gs_data-BOOKID, gs_data-CUSTOMID, gs_data-CUSTTYPE.
 ENDLOOP.
 ```
+</br>
+</br>
+
+### 실습 2
