Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -226,3 +226,61 @@ ENDLOOP.
 </br>
 
 ### 실습 2
+- FOR ALL ENTRIES IN 사용해서 출력
+```abap
+DATA: gt_data TYPE TABLE OF sflight,
+      gt_result TYPE TABLE OF sflight.
+
+SELECT carrid
+  FROM sflight
+  INTO CORRESPONDING FIELDS OF TABLE gt_data
+  WHERE carrid IN ('AA', 'AZ', 'LH').
+  " carrid가 'AA', 'AZ', 'LH'에 포함되는 레코드만 조회
+
+IF gt_data IS INITIAL.
+  SORT gt_data BY carrid.   " carrid 오름차순 정렬
+  " gt_data에 carrid가 중복된 레코드는 삭제
+  " => 중복 레코드가 존재하면, 자동 제거되지 않고 DB 요청이 들어감
+  " => 그만큼 속도가 늦어지는 것이기 때문에 SELECT 전애
+  " => 정렬 및 중복제거를 해주는 것이 좋다.
+  DELETE ADJACENT DUPLICATES FROM gt_data COMPARING carrid.
+
+  SELECT * FROM sflight
+    INTO CORRESPONDING FIELDS OF TABLE gt_result
+    FOR ALL ENTRIES IN gt_data
+    WHERE carrid = gt_data-carrid.
+      " AND connid = gt_data-connid. 여러 필드 가능
+
+    " 주의! FOR ALL ~ 로 사용하는 gt_data가 비어있으면
+    " 테이블 전체를 조회하므로. 대량 데이터의 Table일 경우
+    " 시스템이 다운될 수 있음. 따라서 gt_data가 있는 경우를
+    " 체크해주는 것이 안전하다.
+
+  IF sy-subrc = 0.
+    cl_demo_output=>display( gt_result ).
+  ENDIF.
+ENDIF.
+```
+</br>
+</br>
+
+### 실습 3
+- FOR ALL ENTRIES IN 사용해서 조회된 항공사 목록을 이용해 항공편 목록 출력
+```abap
+DATA: gs_data   TYPE scarr,
+      gt_data   LIKE TABLE OF gs_data,
+      gt_result TYPE TABLE OF sflight.
+
+SELECT-OPTIONS: so_car FOR gs_data-carrid.
+
+SELECT * FROM scarr
+  INTO CORRESPONDING FIELDS OF TABLE gt_data
+  WHERE carrid IN so_car.
+
+SELECT * FROM sflight
+  INTO CORRESPONDING FIELDS OF TABLE gt_result
+  FOR ALL ENTRIES IN gt_data
+  WHERE carrid = gt_data-carrid.
+
+cl_demo_output=>display( gt_result ).
+```
