Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -49,16 +49,16 @@ DATA gs_flight TYPE ts_flight.
 - 기존 글로벌 Structure를 포함하고, 프로그램 전용 필드를 추가하여 로컬 구조체 확장
 ```abap
 DATA: BEGIN OF <로컬구조체변수명>.
-        INCLUDE TYPE <글로벌Structure명>,
-        <추가필드명1> TYPE <데이터타입>,
-        <추가필드명2> TYPE <데이터타입>,
+        INCLUDE TYPE <글로벌Structure명>.
+DATA: <추가필드명1> TYPE <데이터타입>,
+      <추가필드명2> TYPE <데이터타입>,
       END OF <로컬구조체변수명>.
 ```
 ```abap
-DATA: BEGIN OF gs_flight,
-        INCLUDE TYPE BC400_S_FLIGHT,  " 글로벌 Structure 포함
-        custom1 TYPE CHAR1,
-        custom2 TYPE CHAR1,
+DATA: BEGIN OF gs_flight.
+        INCLUDE TYPE BC400_S_FLIGHT.  " 글로벌 Structure 포함
+DATA: custom1 TYPE CHAR1,
+      custom2 TYPE CHAR1,
       END OF gs_flight.
 
 gs_flight-carrid = 'AA'.       " 글로벌 필드
