Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -79,17 +79,56 @@ ENDIF.
 </br>
 </br>
 
-### 3) IN 연산자
-- 내부 테이블 또는 값 집합에 포함되는지 여부를 조건으로 사용
-- `FOR ALL ENTRIES` 없이도 여러 값을 조회 가능
+### 3) WHERE 조건
+- 조건에 맞는 데이터만 조회할 때 사용
+| 연산자 | 설명 |
+|---|---|
+| `=`, `<`, `>`, `<=`, `>=`, `<>` | 비교 연산자 (같다, 크다, 작다 등) |
+| `IN (dobj1, dobj2, …)` | 값 목록에 포함 여부 |
+| `BETWEEN dobj1 AND dobj2` | 범위 내 값 포함 |
+| `LIKE dobj1` | 패턴 매칭 (`%`, `_` 사용) |
+| `IN seltab` | 내부 테이블 값 포함 여부 |
+| `IS [NOT] NULL` | NULL 여부 검사 |
+| `AND`, `OR`, `NOT` | 논리 조건 결합 / 부정 |
+
+</br>
+
 ```abap
-WHERE field IN @itab_or_value
-```
-```abap
-SELECT carrid
-  FROM sflight
-  INTO TABLE @gt_data
-  WHERE carrid IN ('AA','AZ','LH').
+DATA: lt_sflight TYPE TABLE OF sflight,
+      lt_spfli   TYPE TABLE OF spfli.
+
+SELECT * FROM sflight
+  INTO TABLE @lt_sflight
+  WHERE seats > 10.
+" 결과 예시: seats가 11, 20, 50 등 10 초과인 항공편 조회
+
+SELECT * FROM sflight
+  INTO TABLE @lt_sflight
+  WHERE carrid IN ('AA','LH').
+" 결과 예시: carrid가 'AA' 또는 'LH'인 항공편 조회
+
+SELECT * FROM spfli
+  INTO TABLE @lt_spfli
+  WHERE cityfrom LIKE 'S%O'.
+" 결과 예시: cityfrom이 'S'로 시작하고 'O'로 끝나는 도시 조회
+" 예: 'SEOUL', 'STOCKHOLM'
+
+DATA: gt_carriers TYPE TABLE OF sflight-carrid.
+" (gt_carriers 내부에 carrid 값이 들어있다고 가정)
+SELECT * FROM sflight
+  INTO TABLE @lt_sflight
+  WHERE carrid IN @gt_carriers.
+" 결과 예시: 내부 테이블 gt_carriers에 포함된 carrid의 항공편 조회
+
+SELECT * FROM sflight
+  INTO TABLE @lt_sflight
+  WHERE seats IS NOT NULL.
+" 결과 예시: seats 컬럼 값이 NULL이 아닌 모든 항공편 조회
+
+SELECT * FROM sflight
+  INTO TABLE @lt_sflight
+  WHERE carrid = 'AA' AND seats > 10.
+" 결과 예시: carrid가 'AA'이고 seats가 10 초과인 항공편 조회
 ```
 </br>
 </br>
