Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -134,7 +134,49 @@ SELECT * FROM sflight
 </br>
 </br>
 
-### 4) DELETE ADJACENT DUPLICATES
+### 4) SELECT: ORDER BY & DISTINCT
+### 4-1) SELECT … ORDER BY
+- 조회 결과를 특정 필드 기준으로 정렬
+```abap
+SELECT <필드1> <필드2> … 
+  FROM <테이블>
+  INTO TABLE @<내부테이블>
+  WHERE <조건>
+  ORDER BY <필드> [ASC|DESC].
+```
+```abap
+DATA: lt_flight TYPE TABLE OF sflight.
+
+SELECT carrid connid
+  FROM sflight
+  INTO TABLE @lt_flight
+  WHERE carrid = 'AA'
+  ORDER BY connid DESC.
+" 결과: carrid='AA'인 항공편을 connid 내림차순으로 조회
+```
+</br>
+
+### 4-2) SELECT DISTINCT
+- 중복을 제거하고 유일한 값만 조회
+```abap
+SELECT DISTINCT <필드1> <필드2> …
+  FROM <테이블>
+  INTO TABLE @<내부테이블>
+  WHERE <조건>.
+```
+```abap
+DATA: gt_flight TYPE TABLE OF sflight.
+
+SELECT DISTINCT carrid connid
+  FROM sflight
+  INTO TABLE @gt_flight
+  WHERE seatsocc > 200.
+" 결과: seatsocc > 200인 항공편 중 carrid+connid 조합이 중복 없이 조회
+```
+</br>
+</br>
+
+### 5) DELETE ADJACENT DUPLICATES
 - 정렬된 내부 테이블에서 연속된 중복 레코드를 삭제
 - 중복 기준 필드를 지정 가능
 - `<내부테이블>` → 중복을 제거할 내부 테이블
@@ -158,7 +200,7 @@ DELETE ADJACENT DUPLICATES FROM it_numbers.
 </br>
 </br>
 
-### 5) cl_demo_output=>display
+### 6) cl_demo_output=>display
 - 내부 테이블 또는 구조를 간단히 화면에 출력
 ```abap
 cl_demo_output=>display( <itab> ).
