Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -142,17 +142,17 @@ SELECT <필드1> <필드2> …
   FROM <테이블>
   INTO TABLE @<내부테이블>
   WHERE <조건>
-  ORDER BY <필드> [ASC|DESC].
+  ORDER BY <필드> [ASCENDING|DESCENDING].
 ```
 ```abap
-DATA: lt_flight TYPE TABLE OF sflight.
+DATA: lt_sflight TYPE TABLE OF sflight.
 
-SELECT carrid connid
+" 프라이머리 키(CARRID + CONNID) 순서대로 조회
+SELECT carrid connid seats
   FROM sflight
-  INTO TABLE @lt_flight
-  WHERE carrid = 'AA'
-  ORDER BY connid DESC.
-" 결과: carrid='AA'인 항공편을 connid 내림차순으로 조회
+  INTO TABLE @lt_sflight
+  ORDER BY PRIMARY KEY.
+" 결과: carrid 오름차순, 동일 carrid 내에서는 connid 오름차순 조회
 ```
 
 
@@ -366,3 +366,7 @@ SELECT * FROM sflight
 
 cl_demo_output=>display( gt_result ).
 ```
+</br>
+</br>
+
+### 실습 4
