Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -158,6 +158,7 @@ SELECT carrid connid seats
 
 ### 4-2) SELECT DISTINCT
 - 중복을 제거하고 유일한 값만 조회
+- `DISTINCT`는 DB 조회 시 중복 레코드 제거, `DELETE ADJACENT DUPLICATES`는 정렬된 내부 테이블에서 인접 중복만 제거
 ```abap
 SELECT DISTINCT <필드1> <필드2> …
   FROM <테이블>
