Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -79,7 +79,7 @@ ENDIF.
 </br>
 </br>
 
-### 3) WHERE 조건
+### 3) SELECT - WHERE 조건
 - 조건에 맞는 데이터만 조회할 때 사용
   
 | 연산자 | 설명 |
@@ -134,8 +134,7 @@ SELECT * FROM sflight
 </br>
 </br>
 
-### 4) SELECT: ORDER BY & DISTINCT
-### 4-1) SELECT … ORDER BY
+### 4) SELECT - SELECT … ORDER BY
 - 조회 결과를 특정 필드 기준으로 정렬
 ```abap
 SELECT <필드1> <필드2> … 
@@ -154,9 +153,10 @@ SELECT carrid connid seats
   ORDER BY PRIMARY KEY.
 " 결과: carrid 오름차순, 동일 carrid 내에서는 connid 오름차순 조회
 ```
+</br>
+</br>
 
-
-### 4-2) SELECT DISTINCT
+### 5) SELECT - SELECT DISTINCT
 - 중복을 제거하고 유일한 값만 조회
 - `DISTINCT`는 DB 조회 시 중복 레코드 제거, `DELETE ADJACENT DUPLICATES`는 정렬된 내부 테이블에서 인접 중복만 제거
 ```abap
