Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -1,80 +1,62 @@
-## < ABAP 문법 정리 >
+## < SELECT 관련 함수 >
 </br>
 
-### 1) WITH HEADER LINE
-- 내부 테이블 안에 자동으로 한 줄(row)을 나타내는 구조를 생성
-- 테이블 이름과 동일한 구조가 만들어져 별도 워크에어리어 없이 한 줄 데이터를 바로 사용 가능
-  - `itab[]` → 테이블 전체
-  - `itab` → 테이블의 헤더라인(한 줄)
+### 1) ABAP 집계 함수
+- 데이터베이스 테이블의 값을 요약/통계 내는 함수
+- 단일 값 계산, 그룹별 계산 가능
+- `COUNT`, `MIN`, `MAX`, `SUM`, `AVG`
 ```abap
-DATA: <itab> TYPE TABLE OF <structure> WITH HEADER LINE.
+SELECT COUNT(*) AS <별칭_총레코드수>,
+       MIN(<필드>) AS <별칭_최소값>,
+       MAX(<필드>) AS <별칭_최대값>,
+       SUM(<필드>) AS <별칭_합계>,
+       AVG(<필드>) AS <별칭_평균>
+  FROM <테이블>
+  INTO <워크에어리어 또는 내부테이블>
+  WHERE <조건>            "선택적
+  GROUP BY <필드>          "필요 시
+  HAVING <조건>           "필요 시
 ```
-- INTO 절 생략 가능
 ```abap
-LOOP AT gt_hline.
-  WRITE: gt_hline-carrid.  "헤더 라인 사용 덕분에 INTO 생략 가능
-ENDLOOP.
-```
-- MODIFY 시 자동 참조
-```abap
-gt_hline-percentage = gt_hline-seatsocc * 100 / gt_hline-seatsmax.
-MODIFY gt_hline.  "워크 에어리어(gt_hline)를 테이블에 적용
-```
-- 실습
-```abap
-" Header Line이 있는 Internal table 선언
-" gt_hline은 Structure, gt_hline[] 은 Itab 이 된다.
-DATA: gt_hline TYPE TABLE OF bc400_s_flight WITH HEADER LINE.
+DATA: lt_flightocc TYPE TABLE OF sflight_occ.
 
-SELECT carrid connid fldate seatsmax seatsocc
+SELECT carrid,
+       COUNT(*) AS total_flights,
+       MIN(seatsocc) AS min_seats,
+       MAX(seatsocc) AS max_seats,
+       SUM(seatsocc) AS sum_seats,
+       AVG(seatsocc) AS avg_seats
   FROM sflight
-  INTO TABLE gt_hline[]
-  WHERE carrid = 'AA'.
+  INTO TABLE @lt_flightocc
+  GROUP BY carrid
+  HAVING COUNT(*) >= 5.
 
-IF ( sy-subrc = 0 ).
-  LOOP AT gt_hline.       " INTO 절 생략 가능
-    gt_hline-percentage = gt_hline-seatsocc * 100 / gt_hline-seatsmax.
-    MODIFY gt_hline.
-  ENDLOOP.
-ENDIF.
-
-SORT gt_hline[] BY connid ASCENDING
-                   percentage DESCENDING.
-
-CLEAR gt_hline.
-LOOP AT gt_hline WHERE percentage > 80.
-  WRITE:/ gt_hline-carrid,
-          gt_hline-connid,
-          gt_hline-fldate,
-          gt_hline-seatsmax,
-          gt_hline-seatsocc,
-          gt_hline-percentage.
-ENDLOOP.
+" 각 carrid별 항공편 수, 좌석 최소/최대/합계/평균 조회
+" 항공편 5개 이상인 carrid만 포함
 ```
 </br>
 </br>
 
-### 2) FOR ALL ENTRIES IN
-- 내부 테이블의 값들을 기준으로 DB에서 데이터를 조회
-- 다중 조건 가능
-- 내부 테이블이 비어있으면 전체 조회되므로 체크 필요
-- `FOR ALL ENTRIES IN <내부 테이블>` → 어떤 내부 테이블의 값들을 조건으로 쓸지 지정
-- `WHERE <DB필드> = <내부테이블-필드>` → 실제 비교 조건 작성
+### 2) SELECT - GROUP BY + HAVING
+- `GROUP BY` → 특정 필드 기준으로 레코드를 그룹화
+- `HAVING` → 그룹화된 결과에 조건 적용 (WHERE는 개별 행 조건, HAVING은 그룹 조건)
 ```abap
-SELECT <필드>
+SELECT <그룹필드1> <그룹필드2> …,
+       <집계함수1> AS <별칭1>,
+       <집계함수2> AS <별칭2>
   FROM <DB 테이블>
-  INTO <내부 테이블 또는 변수>
-  FOR ALL ENTRIES IN <내부 테이블>
-  WHERE <조건 = 내부테이블-필드>.
+  INTO <워크에어리어 또는 내부 테이블>
+  WHERE <조건>           "선택적
+  GROUP BY <그룹필드1> <그룹필드2> …
+  HAVING <조건>.         "그룹 조건
 ```
 ```abap
-IF gt_data IS NOT INITIAL.
-  SELECT *
-    FROM sflight
-    INTO TABLE @gt_result
-    FOR ALL ENTRIES IN @gt_data
-    WHERE carrid = @gt_data-carrid.
-ENDIF.
+SELECT carrid,
+       COUNT(*) AS total_flights
+  FROM sflight
+  INTO TABLE @lt_flight
+  GROUP BY carrid
+  HAVING COUNT(*) >= 5.      " 항공편 수가 5개 이상인 carrid만 포함
 ```
 </br>
 </br>
@@ -134,7 +116,7 @@ SELECT * FROM sflight
 </br>
 </br>
 
-### 4) SELECT - SELECT … ORDER BY
+### 4) SELECT … ORDER BY
 - 조회 결과를 특정 필드 기준으로 정렬
 ```abap
 SELECT <필드1> <필드2> … 
@@ -156,7 +138,7 @@ SELECT carrid connid seats
 </br>
 </br>
 
-### 5) SELECT - SELECT DISTINCT
+### 5) SELECT DISTINCT
 - 중복을 제거하고 유일한 값만 조회
 - `DISTINCT`는 DB 조회 시 중복 레코드 제거, `DELETE ADJACENT DUPLICATES`는 정렬된 내부 테이블에서 인접 중복만 제거
 ```abap
@@ -176,6 +158,90 @@ SELECT DISTINCT carrid connid
 ```
 </br>
 </br>
+
+---
+
+</br>
+
+## < ABAP 추가 함수 >
+### 6) FOR ALL ENTRIES IN
+- 내부 테이블의 값들을 기준으로 DB에서 데이터를 조회
+- 다중 조건 가능
+- 내부 테이블이 비어있으면 전체 조회되므로 체크 필요
+- `FOR ALL ENTRIES IN <내부 테이블>` → 어떤 내부 테이블의 값들을 조건으로 쓸지 지정
+- `WHERE <DB필드> = <내부테이블-필드>` → 실제 비교 조건 작성
+```abap
+SELECT <필드>
+  FROM <DB 테이블>
+  INTO <내부 테이블 또는 변수>
+  FOR ALL ENTRIES IN <내부 테이블>
+  WHERE <조건 = 내부테이블-필드>.
+```
+```abap
+IF gt_data IS NOT INITIAL.
+  SELECT *
+    FROM sflight
+    INTO TABLE @gt_result
+    FOR ALL ENTRIES IN @gt_data
+    WHERE carrid = @gt_data-carrid.
+ENDIF.
+```
+</br>
+</br>
+
+### 7) WITH HEADER LINE
+- 내부 테이블 안에 자동으로 한 줄(row)을 나타내는 구조를 생성
+- 테이블 이름과 동일한 구조가 만들어져 별도 워크에어리어 없이 한 줄 데이터를 바로 사용 가능
+  - `itab[]` → 테이블 전체
+  - `itab` → 테이블의 헤더라인(한 줄)
+```abap
+DATA: <itab> TYPE TABLE OF <structure> WITH HEADER LINE.
+```
+- INTO 절 생략 가능
+```abap
+LOOP AT gt_hline.
+  WRITE: gt_hline-carrid.  "헤더 라인 사용 덕분에 INTO 생략 가능
+ENDLOOP.
+```
+- MODIFY 시 자동 참조
+```abap
+gt_hline-percentage = gt_hline-seatsocc * 100 / gt_hline-seatsmax.
+MODIFY gt_hline.  "워크 에어리어(gt_hline)를 테이블에 적용
+```
+- 실습
+```abap
+" Header Line이 있는 Internal table 선언
+" gt_hline은 Structure, gt_hline[] 은 Itab 이 된다.
+DATA: gt_hline TYPE TABLE OF bc400_s_flight WITH HEADER LINE.
+
+SELECT carrid connid fldate seatsmax seatsocc
+  FROM sflight
+  INTO TABLE gt_hline[]
+  WHERE carrid = 'AA'.
+
+IF ( sy-subrc = 0 ).
+  LOOP AT gt_hline.       " INTO 절 생략 가능
+    gt_hline-percentage = gt_hline-seatsocc * 100 / gt_hline-seatsmax.
+    MODIFY gt_hline.
+  ENDLOOP.
+ENDIF.
+
+SORT gt_hline[] BY connid ASCENDING
+                   percentage DESCENDING.
+
+CLEAR gt_hline.
+LOOP AT gt_hline WHERE percentage > 80.
+  WRITE:/ gt_hline-carrid,
+          gt_hline-connid,
+          gt_hline-fldate,
+          gt_hline-seatsmax,
+          gt_hline-seatsocc,
+          gt_hline-percentage.
+ENDLOOP.
+```
+</br>
+</br>
+
 
 ### 5) DELETE ADJACENT DUPLICATES
 - 정렬된 내부 테이블에서 연속된 중복 레코드를 삭제
