Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -1,5 +1,4 @@
 ## < SELECT 관련 함수 >
-</br>
 
 ### 1) ABAP 집계 함수
 - 데이터베이스 테이블의 값을 요약/통계 내는 함수
@@ -163,8 +162,8 @@ SELECT DISTINCT carrid connid
 
 </br>
 
-## < ABAP 추가 함수 >
-### 6) FOR ALL ENTRIES IN
+## < ABAP 추가 문법 >
+### 1) FOR ALL ENTRIES IN
 - 내부 테이블의 값들을 기준으로 DB에서 데이터를 조회
 - 다중 조건 가능
 - 내부 테이블이 비어있으면 전체 조회되므로 체크 필요
@@ -189,7 +188,31 @@ ENDIF.
 </br>
 </br>
 
-### 7) WITH HEADER LINE
+### 2) DELETE ADJACENT DUPLICATES
+- 정렬된 내부 테이블에서 연속된 중복 레코드를 삭제
+- 중복 기준 필드를 지정 가능
+- `<내부테이블>` → 중복을 제거할 내부 테이블
+- `COMPARING` → 특정 필드 기준으로 중복 제거 (생략하면 전체 구조 기준)
+```abap
+DELETE ADJACENT DUPLICATES FROM <내부테이블>
+  [COMPARING <필드1> <필드2> ...].
+```
+```abap
+DATA: it_numbers TYPE TABLE OF i,
+      wa_number  TYPE i.
+
+APPEND 10 TO it_numbers.
+APPEND 10 TO it_numbers.
+APPEND 20 TO it_numbers.
+APPEND 20 TO it_numbers.
+APPEND 30 TO it_numbers.
+
+DELETE ADJACENT DUPLICATES FROM it_numbers.
+```
+</br>
+</br>
+
+### 3) WITH HEADER LINE
 - 내부 테이블 안에 자동으로 한 줄(row)을 나타내는 구조를 생성
 - 테이블 이름과 동일한 구조가 만들어져 별도 워크에어리어 없이 한 줄 데이터를 바로 사용 가능
   - `itab[]` → 테이블 전체
@@ -242,32 +265,7 @@ ENDLOOP.
 </br>
 </br>
 
-
-### 5) DELETE ADJACENT DUPLICATES
-- 정렬된 내부 테이블에서 연속된 중복 레코드를 삭제
-- 중복 기준 필드를 지정 가능
-- `<내부테이블>` → 중복을 제거할 내부 테이블
-- `COMPARING` → 특정 필드 기준으로 중복 제거 (생략하면 전체 구조 기준)
-```abap
-DELETE ADJACENT DUPLICATES FROM <내부테이블>
-  [COMPARING <필드1> <필드2> ...].
-```
-```abap
-DATA: it_numbers TYPE TABLE OF i,
-      wa_number  TYPE i.
-
-APPEND 10 TO it_numbers.
-APPEND 10 TO it_numbers.
-APPEND 20 TO it_numbers.
-APPEND 20 TO it_numbers.
-APPEND 30 TO it_numbers.
-
-DELETE ADJACENT DUPLICATES FROM it_numbers.
-```
-</br>
-</br>
-
-### 6) cl_demo_output=>display
+### 4) cl_demo_output=>display
 - 내부 테이블 또는 구조를 간단히 화면에 출력
 ```abap
 cl_demo_output=>display( <itab> ).
