Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -33,6 +33,13 @@ SELECT carrid,
 " 각 carrid별 항공편 수, 좌석 최소/최대/합계/평균 조회
 " 항공편 5개 이상인 carrid만 포함
 ```
+- `COUNT( DISTINCT 필드명 )` : 중복이 제거된 필드의 갯수
+```abap
+" 전체 유니크 항공사 수
+SELECT COUNT(DISTINCT carrid) 
+  FROM sflight 
+  INTO @DATA(total).
+```
 </br>
 </br>
 
