Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -1,6 +1,6 @@
 ## < SELECT 관련 함수 >
 
-### 1) ABAP 집계 함수
+### 1) SELECT 집계 함수
 - 데이터베이스 테이블의 값을 요약/통계 내는 함수
 - 단일 값 계산, 그룹별 계산 가능
 - `COUNT`, `MIN`, `MAX`, `SUM`, `AVG`
