Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -442,3 +442,116 @@ cl_demo_output=>display( gt_result ).
 </br>
 
 ### 실습 4
+- order by 실습
+```abap
+DATA: gs_sflight TYPE sflight,
+      gt_sflight TYPE TABLE OF sflight.
+
+* Key 값으로 정렬
+SELECT *
+  INTO CORRESPONDING FIELDS OF TABLE gt_sflight
+  FROM SFLIGHT
+  ORDER BY SEATSMAX DESCENDING.
+* ORDER BY PRIMARY KEY.
+* ORDER BY carrid DESCENDING connid ASCENDING
+
+IF sy-subrc = 0.
+  cl_demo_output=>display( gt_sflight ).
+*  LOOP AT gt_sflight INTO gs_sflight.
+*    WRITE:/ gs_sflight-carrid,
+*            gs_sflight-connid,
+*            gs_sflight-fldate.
+*  ENDLOOP.
+ENDIF.
+```
+</br>
+</br>
+
+### 실습 5
+- SELECT DISTINCT 실습습
+```abap
+DATA: gs_sflight TYPE sflight,
+      gt_sflight TYPE TABLE OF sflight.
+
+* Key 값으로 정렬
+SELECT DISTINCT CARRID CONNID
+  INTO CORRESPONDING FIELDS OF TABLE gt_sflight
+  FROM SFLIGHT
+  ORDER BY CARRID CONNID.
+
+IF sy-subrc = 0.
+  LOOP AT gt_sflight INTO gs_sflight.
+    WRITE:/ gs_sflight-carrid,
+            gs_sflight-connid.
+  ENDLOOP.
+ENDIF.
+```
+</br>
+</br>
+
+### 실습 6
+- SELECT 집계함수 실습
+```abap
+* MIN, MAX, SUM, AVG, COUNT에 대한 내용
+* 만약 COUNT( DISTINCT 필드명 ) 입력 시
+* 중복이 제거된 필드의 갯수를 얻을 수 있음
+DATA: BEGIN OF gs_data,
+        MIN TYPE sflight-seatsocc,
+        MAX TYPE sflight-seatsocc,
+        SUM TYPE sflight-seatsocc,
+        AVG TYPE F,
+        CNT TYPE I,
+      END OF gs_data.
+DATA: gv_cnt TYPE I.
+
+SELECT MIN( SEATSOCC ) MAX( SEATSOCC )
+       SUM( SEATSOCC ) AVG( SEATSOCC )
+       COUNT( * )
+  FROM SFLIGHT
+  INTO gs_data
+  WHERE carrid = 'LH'
+    AND connid = '0400'.
+
+SELECT COUNT( DISTINCT connid )
+  FROM SFLIGHT
+  INTO gv_cnt
+  WHERE carrid = 'AA'.
+
+WRITE: 'gv_cnt', gv_cnt.
+
+IF sy-subrc = 0.
+  WRITE:/ 'MIN', 10 gs_data-MIN,
+        / 'MAX', 10 gs_data-MAX,
+        / 'SUM', 10 gs_data-SUM,
+        / 'AVG', 10 gs_data-AVG,
+        / 'CNT', 10 gs_data-CNT.
+ENDIF.
+```
+</br>
+</br>
+
+### 실습 7
+- GROUP BY + HAVING 절 실습
+```abap
+DATA: BEGIN OF gs_data,
+        connid TYPE sflight-connid,
+        minvar TYPE sflight-seatsocc,
+        maxvar TYPE sflight-seatsocc,
+        sumvar TYPE sflight-seatsocc,
+        avgvar TYPE P LENGTH 3 DECIMALS 2,
+      END OF gs_data.
+DATA: gt_data LIKE TABLE OF gs_data.
+
+SELECT CONNID MIN( seatsocc ) MAX( seatsocc )
+       SUM( seatsocc ) AVG( seatsocc )
+  FROM SFLIGHT
+  INTO TABLE gt_data
+  WHERE carrid = 'LH'   " carrid가 LH인 것만 조회해라
+  GROUP BY connid       " 그 중, connid로 그룹화해라
+  HAVING SUM( seatsocc ) >= 300.
+  " 그룹화된 결과 데이터 중에, SUM( seatsocc )필드가 300 이상인 데이터만 조회해라
+
+IF sy-subrc = 0.
+  cl_demo_output=>display( gt_data ).
+ENDIF.
+```
