--- a/ABAP 기초/실습 과제 모음.md
+++ b/ABAP 기초/실습 과제 모음.md
@@ -1,4 +1,5 @@
-### 1) SELECT 활용해서 출력
+### 1) 실습 - SELECT 활용해서 출력
+- SELECT 쓰고 LOOP문 쓰기
 ```abap
 *&---------------------------------------------------------------------*
 *& Report ZBC400_B03_ITAB01
@@ -63,6 +64,76 @@ LOOP AT gt_data INTO gs_data.
 ENDLOOP.
 
 *****    5. economy class, business class, first class의 각 남은 좌석을 구한다.
+
+LOOP AT gt_data INTO gs_data.
+  gs_data-SEATREMAIN = gs_data-SEATSMAX - gs_data-SEATSOCC.
+  gs_data-SEATREMAIN_B = gs_data-SEATSMAX_B - gs_data-SEATSOCC_B.
+  gs_data-SEATREMAIN_F = gs_data-SEATSMAX_F - gs_data-SEATSOCC_F.
+  MODIFY gt_data FROM gs_data.
+ENDLOOP.
+
+IF sy-subrc <> 0.
+  MESSAGE 'Data is not found' TYPE 'E'.
+ELSE.
+  cl_demo_output=>display_data( gt_data ).
+ENDIF.
+```
+</br>
+</br>
+
+### 2) 실습 - SELECT 활용해서 출력
+- LOOP문 안에 SELECT 쓰기
+```abap
+*&---------------------------------------------------------------------*
+*& Report ZBC400_B03_ITAB01
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+REPORT zbc400_b03_itab01.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE ZSCLB03_DEMO.
+DATA: SEATREMAIN TYPE INT4,
+      SEATREMAIN_B TYPE INT4,
+      SEATREMAIN_F TYPE INT4,
+      END OF gs_data.
+DATA: gt_data LIKE TABLE OF gs_data,
+      gv_carrname TYPE S_CARRNAME.
+
+SELECT-OPTIONS: so_con FOR gs_data-CONNID,
+                so_dat FOR gs_data-FLDATE.
+
+IF sy-subrc <> 0.
+  MESSAGE 'Data is not found' TYPE 'E'.
+ENDIF.
+
+*****    2. SFLIGHT Table에서 기본적으로 제공될 Flight List Info를 취득해서 데이터를 보여준다.
+
+SELECT * FROM sflight
+  INTO CORRESPONDING FIELDS OF TABLE gt_data
+  WHERE carrid = pa_car AND connid IN so_con.
+
+*****    3. SCARR Table에서 CARRNAME를 취득해서 데이터를 보여준다.
+
+LOOP AT gt_data INTO gs_data.
+  SELECT SINGLE carrname FROM scarr
+    INTO gs_data-carrname
+    WHERE carrid = pa_car.
+  MODIFY gt_data FROM gs_data.
+ENDLOOP.
+
+*****    4. SPFLI Table에서 CITYFROM, CITYTO를 취득해서 데이터를 보여준다.
+
+LOOP AT gt_data INTO gs_data.
+  SELECT SINGLE cityfrom cityto FROM spfli
+    INTO (gs_data-cityfrom, gs_data-cityto)
+    WHERE carrid = pa_car.
+  MODIFY gt_data FROM gs_data.
+ENDLOOP.
+
+******    5. economy class, business class, first class의 각 남은 좌석을 구한다.
 
 LOOP AT gt_data INTO gs_data.
   gs_data-SEATREMAIN = gs_data-SEATSMAX - gs_data-SEATSOCC.
