Update 실습 과제 모음.md

--- a/ABAP 기초/실습 과제 모음.md
+++ b/ABAP 기초/실습 과제 모음.md
@@ -1,4 +1,4 @@
-### 1) 실습 - SELECT 활용해서 출력
+### 1) 실습 1 - SELECT 활용해서 출력
 - SELECT 쓰고 LOOP문 쓰기
 ```abap
 *&---------------------------------------------------------------------*
@@ -81,7 +81,7 @@ ENDIF.
 </br>
 </br>
 
-### 2) 실습 - SELECT 활용해서 출력
+### 2) 실습 1 - SELECT 활용해서 출력
 - LOOP문 안에 SELECT 쓰기
 ```abap
 *&---------------------------------------------------------------------*
