Update 실습 과제 모음.md

--- a/ABAP 기초/실습 과제 모음.md
+++ b/ABAP 기초/실습 과제 모음.md
@@ -117,6 +117,15 @@ SELECT * FROM sflight
 
 *****    3. SCARR Table에서 CARRNAME를 취득해서 데이터를 보여준다.
 
+*LOOP AT gt_data INTO gs_data.
+*  SELECT SINGLE carrname FROM scarr
+*    INTO gv_carrname
+*    WHERE carrid = pa_car.
+*  gs_data-carrname = gv_carrname.
+*  MODIFY gt_data FROM gs_data.
+*ENDLOOP.
+* <-- 이렇게 써도 가능
+
 LOOP AT gt_data INTO gs_data.
   SELECT SINGLE carrname FROM scarr
     INTO gs_data-carrname
