Update 프로그래핑 문법과 로직 (11.25).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.25).md
@@ -69,6 +69,7 @@ SELECT carrid,
 
 ### 3) SELECT - WHERE 조건
 - 조건에 맞는 데이터만 조회할 때 사용
+- `%` : 0개 이상 문자 대체, `_` : 정확히 1글자 대체
   
 | 연산자 | 설명 |
 |---|---|
