Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -1,6 +1,5 @@
 ## < ABAP 추가 문법 >
 ### 1) APPENDING
-- `INTO` 대신 `APPENDING` 넣기
 - `SELECT` 결과를 기존 내부테이블 뒤에 이어서 추가
 - 내부테이블의 기존 데이터는 그대로 유지
 - 필드명이 같은 컬럼만 자동으로 매칭
@@ -9,6 +8,6 @@
 ```abap
 SELECT <필드1> <필드2> ...
   FROM <테이블>
-  APPENDING CORRESPONDING FIELDS OF TABLE <itab>
+  APPENDING CORRESPONDING FIELDS OF TABLE <itab>  " `INTO` 대신 `APPENDING` 넣기
   WHERE <조건>.
 ```
