Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -10,3 +10,30 @@ SELECT <필드1> <필드2> ...
   APPENDING CORRESPONDING FIELDS OF TABLE <itab>  " `INTO` 대신 `APPENDING` 넣기
   WHERE <조건>.
 ```
+</br>
+</br>
+
+### 2) CLIENT SPECIFIED
+- SAP ABAP에서 일반적으로 SELECT는 현재 클라이언트(sy-mandt) 기준으로만 데이터 조회.
+- CLIENT SPECIFIED를 사용하면 MANDT 값을 직접 지정하여 다른 클라이언트 데이터도 조회 가능.
+- 주의: 잘못 사용하면 보안/데이터 일관성 문제 발생 가능.
+```abap
+SELECT fields
+  INTO <TABLE|STRUCTURE>
+  FROM dbtable
+  CLIENT SPECIFIED
+  WHERE mandt = '값'.
+```
+```abap
+DATA: lt_scarr TYPE TABLE OF SCARR.
+
+SELECT *
+  INTO CORRESPONDING FIELDS OF TABLE lt_scarr
+  FROM SCARR
+  CLIENT SPECIFIED
+  WHERE mandt BETWEEN '000' AND '800'.
+
+IF sy-subrc = 0.
+  cl_demo_output=>display( lt_scarr ).
+ENDIF.
+```
