--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -1,5 +1,5 @@
 ## < ABAP 추가 문법 >
-### 1) APPENDING
+**1) APPENDING**
 - `SELECT` 결과를 기존 내부테이블 뒤에 이어서 추가. 내부테이블의 기존 데이터는 그대로 유지.
 - 필드명이 같은 컬럼만 자동으로 매칭
 - `INTO TABLE` : 내부테이블을 비우고 새 데이터로 채움
@@ -13,7 +13,7 @@ SELECT <필드1> <필드2> ...
 </br>
 </br>
 
-### 2) CLIENT SPECIFIED
+**2) CLIENT SPECIFIED**
 - SAP ABAP에서 일반적으로 SELECT는 현재 클라이언트(sy-mandt) 기준으로만 데이터 조회.
 - CLIENT SPECIFIED를 사용하면 MANDT 값을 직접 지정하여 다른 클라이언트 데이터도 조회 가능.
 - 주의: 잘못 사용하면 보안/데이터 일관성 문제 발생 가능.
