Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -2,10 +2,12 @@
 </br>
 
 **1) APPENDING**
-- `SELECT` 결과를 기존 내부테이블 뒤에 이어서 추가. 내부테이블의 기존 데이터는 그대로 유지.
-- 필드명이 같은 컬럼만 자동으로 매칭
-- `INTO TABLE` : 내부테이블을 비우고 새 데이터로 채움
-- `APPENDING CORRESPONDING FIELDS OF TABLE` : 기존 데이터 유지, 새 데이터 뒤에 추가
+- SELECT 결과를 기존 내부 테이블 뒤에 이어서 추가
+- 기존 데이터는 그대로 유지
+- 필드명이 같은 컬럼끼리 자동 매칭
+- 구문 비교:
+  - `INTO TABLE itab` → 내부테이블 기존 내용 삭제 후 새 데이터
+  - `APPENDING CORRESPONDING FIELDS OF TABLE itab` → 기존 데이터 유지 후 추가
 ```abap
 SELECT <필드1> <필드2> ...
   FROM <테이블>
