Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -1,6 +1,44 @@
-# JOIN
+# Table Join 방법
+### 1) Database View 이용
+- DB 레벨에서 여러 테이블을 미리 조인하여 가상 테이블(View) 생성
+- 재사용 가능, SQL 최적화, 코드 간결
+- 조건 변경에는 유연하지 않음
+```abap
+SELECT <필드1> <필드2> ...
+  FROM <DatabaseView>
+  WHERE <조건>.
+```
+```
+SELECT carrid connid carrname      
+  FROM zabc        " zabc는 이미 여러 테이블을 조인해 만든 Database View
+  WHERE carrid = 'LH'.
+```
+### 2) 프로그램에서 직접 조인
+- ABAP 프로그램 안에서 SELECT문에서 직접 JOIN 수행
+- 조건을 동적으로 처리 가능, 유연성 높음
+- 코드 길어지고, DB 최적화는 View보다 어려움
+```abap
+SELECT <테이블1~필드>, <테이블2~필드>
+  INTO TABLE <내테이블>
+  FROM <테이블1>
+  INNER JOIN <테이블2>
+  ON <테이블1~키> = <테이블2~키>
+  WHERE <조건>.
+```
+```abap
+SELECT SCARR~CARRID
+       SPFLI~CONNID
+       SCARR~CARRNAME
+       SPFLI~CITYFROM
+  INTO TABLE lt_flight
+  FROM SCARR as A INNER JOIN SPFLI as B
+    ON SCARR~CARRID = SPFLI~CARRID
+  WHERE SCARR~CARRID = 'AA'.
 
-
+  IF sy-subrc = 0.
+    cl_demo_output=>display( lt_flight ).
+  ENDIF.
+```
 </br>
 
 ---
