Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -41,6 +41,26 @@ SELECT SCARR~CARRID
     cl_demo_output=>display( lt_flight ).
   ENDIF.
 ```
+```abap
+TYPES: BEGIN OF ts_data,
+        CARRID TYPE SCARR-CARRID,
+        CONNID TYPE SFLIGHT-CONNID,
+        FLDATE TYPE SFLIGHT-FLDATE,
+       END OF ts_data.
+
+DATA: gs_data TYPE ts_data,
+      gt_data TYPE TABLE OF ts_data.
+
+SELECT C~CARRID F~CONNID F~FLDATE
+  INTO TABLE gt_data
+  FROM SCARR AS C INNER JOIN SFLIGHT AS F
+    ON C~CARRID = F~CARRID
+  WHERE C~CARRID = 'AA'.
+
+  IF sy-subrc = 0.
+    cl_demo_output=>display( gt_data ).
+  ENDIF.
+```
 </br>
 </br>
 
