--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -16,6 +16,9 @@ SELECT carrid connid carrname
 </br>
 
 ### 2) 프로그램에서 직접 조인
+- `INNER JOIN` : 두 테이블 모두에 있는 데이터만 반환 (교집합)
+- `LEFT OUTER JOIN` : 왼쪽 테이블 기준, 오른쪽 테이블 없으면 NULL 포함
+- `RIGHT OUTER JOIN` : 오른쪽 테이블 기준, 왼쪽 테이블 없으면 NULL 포함
 - ABAP 프로그램 안에서 SELECT문에서 직접 JOIN 수행
 - 조건을 동적으로 처리 가능, 유연성 높음
 - 코드 길어지고, DB 최적화는 View보다 어려움
