Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -37,7 +37,7 @@ SELECT SCARR~CARRID
        SPFLI~CITYFROM
   INTO TABLE lt_flight
   FROM SCARR as A INNER JOIN SPFLI as B
-    ON SCARR~CARRID = SPFLI~CARRID
+    ON SCARR~CARRID = SPFLI~CARRID      " spfli와 scarr 모두 존재하는 carrid만 결과에 포함
   WHERE SCARR~CARRID = 'AA'.
 
   IF sy-subrc = 0.
