Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -19,6 +19,10 @@ SELECT carrid connid carrname
 - `INNER JOIN` : 두 테이블 모두에 있는 데이터만 반환 (교집합)
 - `LEFT OUTER JOIN` : 왼쪽 테이블 기준, 오른쪽 테이블 없으면 NULL 포함
 - `RIGHT OUTER JOIN` : 오른쪽 테이블 기준, 왼쪽 테이블 없으면 NULL 포함
+</br>
+
+- - : 내부 테이블(워크 에어리어) 또는 구조 필드 접근용
+  - ~ : DB 테이블이나 뷰 필드 접근용 (SELECT, JOIN, WHERE 등)
 - ABAP 프로그램 안에서 SELECT문에서 직접 JOIN 수행
 - 조건을 동적으로 처리 가능, 유연성 높음
 - 코드 길어지고, DB 최적화는 View보다 어려움
