--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -77,6 +77,24 @@ SELECT C~CARRID F~CONNID F~FLDATE
 
 </br>
 
+## < AUTHORITY-CHECK (SU21) >
+- 사용자가 특정 권한을 가지고 있는지 확인하는 ABAP 구문
+- Role 부여: 특정 사용자에게 역할(Role)을 부여하면 해당 권한 획득
+- 권한 객체(Object) + 필드(ID) + 액티비티(ACTVT) 기반으로 체크
+- ACTVT(Activity): 수행 가능한 작업 지정
+  - `01` = Create
+  - `02` = Change
+  - `03` = Display
+- AUTHORITY-CHECK: ABAP에서 사용자 권한을 확인하는 구문
+  - 성공 여부는 sy-subrc로 판단 (0 = 권한 있음, <>0 = 권한 없음)
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < ABAP 추가 문법 >
 </br>
 
