Update 프로그래핑 문법과 로직 (11.26).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -120,6 +120,58 @@ ENDIF.
 
 </br>
 
+## < ABAP EVENT >
+- 프로그램 실행 시점에 자동 호출되는 코드 블록
+- 주요 이벤트
+  - INITIALIZATION
+    - 프로그램 시작 시 실행
+    - 화면이나 변수의 초기값 설정
+  - AT SELECTION-SCREEN
+    - 사용자가 셀렉션 스크린에 입력한 값 처리
+    - 입력값 검증이나 추가 처리 수행
+  - START-OF-SELECTION
+    - SAP에서 사전 정의된 이벤트
+    - 프로그램 실행 시 자동 호출
+    - 메인 처리 로직 수행 (데이터 조회, 주요 작업)
+- 주의 및 특징
+  - 동일 이벤트 중복 선언 불가
+  - 모든 이벤트 작성 필요 없음 (필요한 것만 사용)
+  - 이벤트 순서와 상관없이 호출 시점에 따라 실행됨
+```abap
+REPORT z_event_example.
+
+" 초기값 설정
+INITIALIZATION.
+  gv_title = '항공편 조회 프로그램'.
+
+" 셀렉션 스크린 입력값 검증
+PARAMETERS: p_carrid TYPE spfli-carrid.
+
+AT SELECTION-SCREEN.
+  IF p_carrid IS INITIAL.
+    MESSAGE '항공사를 입력하세요.' TYPE 'E'.
+  ENDIF.
+
+" 메인 처리 로직
+START-OF-SELECTION.
+  SELECT * FROM spfli
+    WHERE carrid = p_carrid
+    INTO TABLE @DATA(lt_spfli).
+
+  LOOP AT lt_spfli INTO DATA(ls_spfli).
+    WRITE: / ls_spfli-carrid, ls_spfli-connid, ls_spfli-cityfrom, ls_spfli-cityto.
+  ENDLOOP.
+```
+</br>
+</br>
+
+---
+
+</br>
+
+
+</br>
+
 ## < ABAP 추가 문법 >
 </br>
 
