--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -123,13 +123,13 @@ ENDIF.
 ## < ABAP EVENT >
 - 프로그램 실행 시점에 자동 호출되는 코드 블록
 - 주요 이벤트
-  - INITIALIZATION
+  - **INITIALIZATION**
     - 프로그램 시작 시 실행
     - 화면이나 변수의 초기값 설정
-  - AT SELECTION-SCREEN
+  - **AT SELECTION-SCREEN**
     - 사용자가 셀렉션 스크린에 입력한 값 처리
     - 입력값 검증이나 추가 처리 수행
-  - START-OF-SELECTION
+  - **START-OF-SELECTION**
     - SAP에서 사전 정의된 이벤트
     - 프로그램 실행 시 자동 호출
     - 메인 처리 로직 수행 (데이터 조회, 주요 작업)
