Update 프로그래핑 문법과 로직 (11.26).md\

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.26).md
@@ -224,5 +224,48 @@ ENDIF.
 </br>
 
 ## < 실습 코드 >
-### 실습 1
+</br>
 
+### 실습 1
+- Event 함수 실습
+```abap
+DATA: gt_flight TYPE TABLE OF SFLIGHT,
+      gs_flight LIKE LINE OF gt_flight.
+
+SELECT-OPTIONS: so_con FOR gs_flight-connid.
+PARAMETERS: pa_car TYPE sflight-carrid,
+            pa_chk TYPE CHAR01 AS CHECKBOX DEFAULT 'X'.
+
+INITIALIZATION.
+  pa_car = 'LH'.
+  so_con-SIGN = 'I'.
+  so_con-OPTION = 'EQ'.
+  so_con-LOW = '0400'.
+  so_con-HIGH = '0402'.
+  APPEND so_con. " 원래 APPEND SO_CON TO SO_SON 처럼
+                 " TO~부분이 있어야 하지만, Select-options는
+                 " Header Line 있는 itab 이므로 생략
+  CLEAR so_con.  " Header(Structure)만 클리어
+
+  so_con-SIGN = 'E'.
+  so_con-OPTION = 'EQ'.
+  so_con-LOW = '0400'.
+  APPEND so_con.
+  CLEAR so_con.
+
+AT SELECTION-SCREEN.
+  IF pa_chk = 'X' AND pa_car IS INITIAL.
+    MESSAGE 'carrid를 입력하세요~~~~' TYPE 'E'.
+  ENDIF.
+
+START-OF-SELECTION.
+  SELECT *
+    FROM SFLIGHT
+    INTO CORRESPONDING FIELDS OF TABLE gt_flight
+    WHERE CARRID = PA_CAR
+      AND CONNID IN SO_CON.
+
+  IF sy-subrc = 0.
+    cl_demo_output=>display( gt_flight ).
+  ENDIF.
+```
